# WaveBoost

./: .gitignore  .graph_refresh  README.md  Roadmap.md  THREE_WAY_COMPARISON.md  et --hard HEAD~1  main.py  pyproject.toml
Effeciently_Serving_LLM/: Lesson_2-Batching.ipynb
Triton_kernels/: 1d_conv.py  cuda_conv1d.py
Triton_kernels/conv1d_results/: conv1d.csv
Triton_kernels/triton_results/: vector-add-performance.csv
benchmarks/flash_attention/latency/: latency.csv
benchmarks/flash_attention/memory/: memory.csv
benchmarks/flash_attention/profiling/: profiler.txt
benchmarks/flash_attention/throughput/: throughput.csv
continuous-batching/: main.py  pyproject.toml
continuous-batching/src/batching_engine/: main.py
distillation/: OUTPUT.MD  distil fix.py  qwen3_distillation.py
experiments/kernels/GEMM/: L3_1
experiments/kernels/GEMM/kernels/: Fast_GEMM.cu
experiments/kernels/Memory_bound/: benchmark.py
experiments/kernels/Triton_kernels/: 1d_conv.py
experiments/notes/: text_generation_gpt2.py
experiments/notes/Effeciently_Serving_LLM/: Lesson_1-Text_Generation.ipynb  Lesson_4-Quantization.ipynb  predibase_lorax.ipynb
experiments/notes/LLM_from_scratch/: Roadmap_notes.md  mha-implementations.ipynb
experiments/notes/cpp/: roadmap.md
experiments/test/cuda/: .ninja_deps  .ninja_log  build.ninja  cuda.cu
kernels/GEMM/: L1  L2  L2_1  L3  main.cu
kernels/GEMM/kernels/: 2d_tiling.cu  Naive_coalesced.cu  Naive_non_coalesced.cu
kernels/attention/flash_attention/: Flash.cu  PERFORMANCE_ANALYSIS.md  compare_baseline.py  visualize_benchmarks.py
kernels/attention/vllm_attention/: comparison_output.txt
notes/: attention.py  hf_attention_adapter.py
notes/Effeciently_Serving_LLM/: Lesson_1-Text_Generation.ipynb  Lesson_5-Low-Rank_Adaptation.ipynb  Lesson_6-Multi-LoRA.ipynb
notes/LLM_from_scratch/: mha-implementations.ipynb
pd-separation-lab/: pyproject.toml
pd-separation-lab/src/pd_separation_lab/: main.py
quantization/: pyproject.toml
quantization/src/quantization_lab/: main.py
test/: Fa.py
test/cuda/: main.cpp
(+17 files in other folders)
