[project]
name = "pd-separation-lab"
version = "0.1.0"
description = "Prefill-Decode separation inference simulation"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
run-pd = "pd_separation_lab.main:run_experiment"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pd_separation_lab"]
