[project]
name = "quantization-lab"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets",
    "accelerate",
    "evaluate",
    "bitsandbytes",
    "matplotlib",
    "numpy",
    "ninja>=1.13.0",
    "pybind11>=3.0.2",
    "setuptools>=82.0.0",
    "wheel>=0.46.3",
    "cmake>=4.2.3",
    "packaging>=26.0",
]

[project.scripts]
run-quant = "quantization_lab.main:run_experiment"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantization_lab"]
